--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "react-router-dom": "^7.11.0",
-    "recharts": "^3.6.0",
-    "@google/genai": "^1.34.0"
+    "lucide-react": "0.263.1",
+    "react-router-dom": "6.15.0",
+    "recharts": "2.8.0",
+    "@google/genai": "0.0.12",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
